offload/tests/ui/fail_unknown_option.stderr
error: unsupported offload option; valid options are `export = "..."`, `deny_floats`, and `try`
 --> tests/ui/fail_unknown_option.rs:3:11
  |
3 | #[offload(remote)]
  |           ^^^^^^
